--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ async-timeout==4.0.2
 attrs==23.1.0
 audioread==3.0.0
 auto-py-to-exe==2.35.0
+av==10.0.0
 backcall==0.2.0
 backoff==2.2.1
 beautifulsoup4==4.12.2
@@ -159,11 +160,13 @@ pyannote.core==5.0.0
 pyannote.database==5.0.1
 pyannote.metrics==3.2.1
 pyannote.pipeline==2.3
+PyAudio==0.2.13
 pyAudioAnalysis==0.3.14
 PyAutoGUI==0.9.54
 pycparser==2.21
 pydantic==1.10.11
 pydub==0.25.1
+pygame==2.5.0
 PyGetWindow==0.0.9
 Pygments==2.15.1
 pyinstaller==5.12.0
@@ -173,12 +176,15 @@ PyMsgBox==1.0.9
 pyparsing==3.0.9
 pyperclip==1.8.2
 PyQt5==5.15.9
+pyqt5-plugins==5.15.9.2.3
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.12.1
+pyqt5-tools==5.15.9.3.3
 PyRect==0.2.0
 pyscreenshot==3.1
 PyScreeze==0.1.29
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 python-editor==1.0.4
 python-json-logger==2.0.7
 python-multipart==0.0.6
@@ -192,6 +198,8 @@ pywin32-ctypes==0.2.0
 pywinpty==2.0.10
 PyYAML==6.0
 pyzmq==25.1.0
+qt5-applications==5.15.2.2.3
+qt5-tools==5.15.2.1.3
 qtconsole==5.4.3
 QtPy==2.3.1
 readchar==4.0.5
@@ -233,6 +241,8 @@ threadpoolctl==3.1.0
 tifffile==2023.4.12
 tiktoken==0.3.3
 tinycss2==1.2.1
+tkVideo==0.1
+tkvideoplayer==2.3
 tokenizers==0.13.3
 toml==0.10.2
 torch==2.0.1
